--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@wapc/host",
   "description": "waPC host for node.js and the browser",
   "author": "jsoverson",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "files": [
@@ -41,7 +41,7 @@
     "@types/chai": "^4.2.16",
     "@types/chai-as-promised": "^7.1.3",
     "@types/debug": "^4.1.5",
-    "@types/estree": "0.0.47",
+    "@types/estree": "^1.0.2",
     "@types/find-root": "^1.1.2",
     "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.41",
@@ -53,15 +53,16 @@
     "find-root": "^1.1.0",
     "mocha": "^8.3.2",
     "prettier": "^2.2.1",
-    "puppeteer": "^8.0.0",
+    "puppeteer": "^21.3.4",
     "rimraf": "^3.0.2",
     "ts-loader": "^9.0.0",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.2.4",
     "webpack": "^5.33.2",
     "webpack-cli": "^4.6.0"
   },
   "dependencies": {
+    "@bjorn3/browser_wasi_shim": "^0.2.15",
     "debug": "^4.3.1"
   }
 }
